fixed responsiveness and minor spacing issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 .item-label {
-  margin: 0px 5px;
+  margin: 0px 10px 0px 0px;
   background: #028090;
   border-radius: 5px;
   padding: 1px 10px;
@@ -54,14 +54,16 @@ body {
   width: 100%;
   background-color: #fdffe3;
   font-family: 'Source Sans Pro', sans-serif;
+  overscroll-behavior-y: none;
 }
 
 .project-card {
   background-color: white;
-  border: 3px solid #05668d;
+  border: 2px solid #05668d;
   box-shadow: 0px 0px 5px #028090;
   padding: 15px;
   margin: 10px 20px;
+  min-width: 250px;
 }
 
 .project-card i {
@@ -71,26 +73,33 @@ body {
 .section-header-left {
   background-color: #05668d;
   color: white;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-  padding: 2px 20px;
+  border-top-right-radius: 33px;
+  border-bottom-right-radius: 33px;
+  padding: 5px 25px;
   margin: 5px 0px;
 }
 
 .section-header-right {
   background-color: #05668d;
   color: white;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  padding: 2px 20px;
+  border-top-left-radius: 33px;
+  border-bottom-left-radius: 33px;
+  padding: 5px 25px;
   margin: 5px 0px;
 }
 
 #page-header {
   color: white;
-  width: 500px;
   background-color: #028090;
-  border-radius: 24px;
+  border-radius: 29px;
+  padding: 5px 25px;
+  margin: 25px 0px;
+}
+
+#page-intro {
+  font-size: 1.5rem;
+  width: auto;
+  padding: 0px 25px;
 }
 
 .subsection-header {
@@ -112,8 +121,8 @@ container > .row {
 
 #page-header-div {
   max-width: 1000px;
-  margin: 15px 15px;
-  padding: 0px 15px;
+  margin: 25px 0px;
+  padding: 0px;
 }
 
 p {
@@ -132,7 +141,6 @@ p {
 .jumbotron.d-lg-flex.justify-content-lg-center.align-items-lg-center {
   background: linear-gradient(#028090, rgb(253,255,227));
   background-color: rgba(240,243,189,0.4);
-  /*background-image: linear-gradient(#46ab99, #aedcd3);*/
   border-radius: 0;
   height: 600px;
   padding-bottom: 48px;
@@ -162,7 +170,7 @@ p {
 
 .fade-in {
   opacity: 0;
-  transform: translateY(2vh);
+  transform: translateY(5vh);
   visibility: hidden;
   transition: opacity 1.0s ease-out, transform 0.5s ease-out;
   will-change: opacity, visibility;
